<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Geocaching4Locus</string>
    <string name="error">Error occurs while downloading caches.&lt;br&gt;Description: %1$s</string>
    <string name="downloading">Downloading caches…</string>
    <string name="error_locus_not_found">Please install Locus!</string>
    <string name="error_location">Please allow Wireless or GPS location service in \'Settings\'.</string>
    <string name="acquiring_gps_location">Acquiring location from GPS…</string>
    <string name="acquiring_network_location">Acquiring location from Wireless network…</string>
    <string name="preferences">Preferences</string>
    <string name="wrong_coordinates">Wrong coordinates format!</string>
    <string name="coordinates">Coordinates</string>
    <string name="pref_title_geocaching_credentials">Geocaching.com credentials</string>
    <string name="pref_title_filter">Filter</string>
    <string name="pref_distance">Distance</string>
    <string name="pref_distance_summary_km">Distance in km</string>
    <string name="pref_distance_summary_miles">Distance in miles</string>
    <string name="pref_title_advanced">Advanced</string>
    <string name="pref_use_compression">Use compression</string>
    <string name="pref_use_compression_summary">Use HTTP compression (experimental)</string>
    <string name="pref_imperial_units">Imperial units</string>
    <string name="pref_imperial_units_summary">Use miles instead of kilemeters</string>
    <string name="error_credentials">Invalid username or password. Please check your sign-in state in preferences.</string>
    <string name="error_title">Error occurs!</string>
    <string name="ok_button">OK</string>
    <string name="error_locus_old">Your installed version of Locus is too old. Geocaching4Locus require version %s or greater to work properly.</string>
    <string name="cancel_button">Cancel</string>
    <string name="pref_show_found">Show found</string>
    <string name="pref_show_found_summary">Show found caches</string>
    <string name="pref_show_own">Show own hidden</string>
    <string name="pref_show_own_summary">Show own caches (hidden by you)</string>
    <string name="pref_menu_select_all">Select all</string>
    <string name="pref_menu_deselect_all">Deselect all</string>
    <string name="update_cache_progress">Updating cache…</string>
    <string name="pref_title_downloading">Downloading</string>
    <string name="pref_count_of_logs">Count of logs</string>
    <string name="pref_count_of_logs_text">logs</string>
    <string name="pref_count_of_logs_summary">Count of logs to download with cache</string>
    <string name="pref_not_filled">not filled</string>
    <string name="gps">GPS</string>
    <string name="close">Close</string>
    <string name="pref_show_disabled">Show disabled</string>
    <string name="pref_show_disabled_summary">Show temporarily disabled caches</string>
    <string name="import_cache_progress">Downloading cache…</string>
    <string name="pref_title_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_author">Author</string>
    <string name="pref_website">Website, forum, etc.</string>
    <string name="pref_donate_paypal">Donate via Paypal</string>
    <string name="pref_donate_paypal_summary">Support the future development…</string>
    <string name="pref_donate_paypal_choose_currency">Choose your currency</string>
    <string name="pref_title_cache_type_filter">Cache types (Premium member)</string>
    <string name="pref_title_difficulty_filter">Difficulty (Premium member)</string>
    <string name="pref_title_terrain_filter">Terrain (Premium member)</string>
    <string name="pref_difficulty_min">Min. difficulty</string>
    <string name="pref_difficulty_max">Max. difficulty</string>
    <string name="pref_terrain_min">Min. terrain</string>
    <string name="pref_terrain_max">Max. terrain</string>
    <string name="download_button">Download to Locus</string>
    <string name="pref_download_basic">Basic info only (Premium member)</string>
    <string name="pref_download_basic_summary">Download only basic information about cache</string>
    <string name="pref_download_on_show">Download rest info on show</string>
    <string name="pref_download_on_show_summary">Download rest information about cache when the cache content is shown in Locus</string>
    <string-array name="pref_download_on_show_entries">
        <item>once</item>
        <item>every</item>
        <item>never</item>
    </string-array>
    <string name="menu_live_map">Live map</string>
    <string name="menu_nearest">Nearest</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_preferences">Preferences</string>
    <string name="pref_livemap">Live map</string>
    <string name="pref_livemap_summary">Live loading caches to map (enable in Locus: Settings → Miscellaneous → Enable periodic updates)</string>
    <string name="user_waypoint_name">User waypoint %1$d</string>
    <string name="final_location_name">Final location %1$d</string>
    <string name="pref_account_login">Sign in</string>
    <string name="pref_account_login_summary">Sign in to Geocaching.com account</string>
    <string name="pref_account_logout">Sign out</string>
    <string name="pref_account_logout_summary">Signed in as %s</string>
    <string name="error_report_error">Report error</string>
    <string name="crash_notif_ticker_text">Geocaching4Locus has crashed…</string>
    <string name="crash_notif_title">Geocaching4Locus has crashed…</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_title">Geocaching4Locus has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="error_network">Network unavailable. Please check your connection.</string>
    <string name="update_caches_progress">Updating caches…</string>
    <string name="original_coordinates_name">Original coordinates</string>
    <string name="pref_title_container_type_filter">Container size (Premium member)</string>
    <string name="pref_create_images_tab">Create images tab</string>
    <string name="pref_create_images_tab_summary">Create images tab in a cache dialog</string>
    <string name="livemap_activated">Live map activated. Now move with map to see caches.</string>
    <string name="livemap_deactivated">Live map deactivated.</string>
    <string name="livemap_disabled">You do not have allowed sending Periodic updates from Locus. Please, enable it first in Locus: Settings → Miscellaneous → Enable periodic updates.</string>
    <string name="error_location_title">No location service allowed</string>
    <string name="error_location_settings_button">Settings</string>
    <string name="menu_import_from_gc">Import GC</string>
    <string name="dialog_gc_number_input_title">Import from GC code</string>
    <string name="error_input_gc">GC code is not valid.</string>
    <string name="error_cache_not_found">Cache %s was not found.</string>
    <string name="dialog_count_of_caches_title">Count of caches</string>
    <string name="launcher_nearest_caches">Nearest caches</string>
    <string name="launcher_import_cache">Import cache to Locus</string>
    <string name="launcher_update_cache">Update cache</string>
    <string name="launcher_update_more_caches">Update caches</string>
    <string name="launcher_import_from_gc">Import from GC code</string>
    <string name="title_count_of_caches">Count of caches</string>
    <string name="button_login_start">Sign in</string>
    <string name="login_required_title">Sign-in required</string>
    <string name="login_required_message">To continue, you must sign in to your Geocaching.com account.</string>
    <string name="basic_member_warning_title">Basic member access</string>
    <string name="premium_member_warning_title">Premium member access</string>
    <string name="basic_member_sign_on_warning_message">As a basic member of geocaching.com you can download full details of &lt;b>%1$s per %2$s period&lt;/b>.&lt;br>
        &lt;br>
        &lt;i>Upgrade to geocaching.com Premium Membership today to download the full details for up to 6000 caches per day and access many more benefits. Visit geocaching.com to upgrade.&lt;/i></string>
    <string name="basic_member_full_geocaching_quota_exceeded">You reached the limit for downloading full details of &lt;b>%1$s per %2$s period&lt;/b>. Your daily quota will be reset at %3$s.&lt;br>
        &lt;br>
        &lt;i>Upgrade to geocaching.com Premium Membership today to download the full details for up to 6000 caches per day and access many more benefits. Visit geocaching.com to upgrade.&lt;/i></string>
    <string name="premium_member_full_geocaching_quota_exceeded_message">You reached the limit for downloading full details of &lt;b>6000 caches per 24 hours period&lt;/b>. Your daily quota will be reset at %3$s.</string>
    <string name="method_quota_exceeded_title">Hey, slow down!</string>
    <string name="method_quota_exceeded_message">You reached the limit for maximum actions/calls per minute period.</string>
    <string name="basic_member_full_geocache_warning_message">As a basic member of geocaching.com you can download full details of %1$s per %2$s period.&lt;br>
        &lt;br>
        &lt;b>You may download %3$s until %4$s when the quota will be reset&lt;/b>.&lt;br>
        &lt;br>
        &lt;b>Do you want continue with downloading?&lt;/b>
        &lt;br>
        &lt;br>&lt;i>Upgrade to geocaching.com Premium Membership today to download the full details for up to 6000 caches per day and access many more benefits. Visit geocaching.com to upgrade.&lt;/i></string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <plurals name="plurals_cache">
        <item quantity="one">%d cache</item>
        <item quantity="few">%d caches</item>
        <item quantity="other">%d caches</item>
    </plurals>
    <plurals name="plurals_hour">
        <item quantity="one">%d hour</item>
        <item quantity="few">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="plurals_minute">
        <item quantity="one">%d minute</item>
        <item quantity="few">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="account_geocaching_live_title">Powered by Geocaching Live</string>
    <string name="account_geocaching_live_message">This add-on use Geocaching Live for getting information about Geocaches. Tap here for more information…</string>
    <string name="error_invalid_api_response">Geocaching Live returns invalid response:&lt;br>%s</string>
    <string name="livemap_notification_title">Geocaching4Locus Live map</string>
    <string name="livemap_notification_message_enabled">Live map is enabled.</string>
    <string name="livemap_notification_message_disabled">Live map is disabled.</string>
    <string name="livemap_notification_message_downloading">Downloading Live map caches: %1$d / %2$d (%3$d%%)</string>
    <string name="livemap_notification_action_enable">Enable Live Map</string>
    <string name="livemap_notification_action_disable">Disable Live Map</string>
    <string name="livemap_error">Geocaching4Locus Live map: %s</string>
    <string name="pref_livemap_show_disabled_notification">Show always notification</string>
    <string name="pref_livemap_show_disabled_notification_summary">This works only if the periodic updates are allowed in Locus and Locus is running.</string>
    <string name="pref_title_live_map">Live map</string>
</resources>