<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        layout="@layout/header" />

    <ScrollView
        style="@style/ScreenContainer"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="1"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/SimpleHeader"
                android:text="@string/coordinates" >

            </TextView>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0" >

                <TableRow>

                    <EditText
                        android:id="@+id/latitudeEditText"
                        style="@style/SimpleEditText"
                        android:inputType="textNoSuggestions" />

                    <Button
                        android:id="@+id/buttonGps"
                        style="@style/SimpleButton.GPS"
                        android:onClick="onClickGps"
                        android:text="@string/gps" >
                    </Button>
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/logitudeEditText"
                        style="@style/SimpleEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions" />
                </TableRow>
            </TableLayout>
            
            <TextView
                style="@style/SimpleHeader"
                android:layout_marginTop="20dp"
                android:text="@string/title_count_of_caches" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cacheCountEditText"
                    style="@style/SimpleEditTextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </EditText>

                <Button
                    style="@style/SimpleButton.Filter"
                    android:onClick="onClickFilter"
                    android:text="@string/button_filter"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?attr/buttonPanelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/searchButton"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:onClick="onClickSearch"
                android:text="@string/download_button"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>