<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.arcao.geocaching4locus.SearchNearestActivity"
    >

    <include layout="@layout/toolbar" />

    <ScrollView
        style="@style/ScreenContainer"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="1"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/SimpleHeader"
                android:text="@string/coordinates" >

            </TextView>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0" >

                <TableRow>

                    <EditText
                        android:id="@+id/latitudeEditText"
                        style="@style/SimpleEditText"
                        android:inputType="textNoSuggestions" />

                    <Button
                        android:id="@+id/gpsButton"
                        style="@style/SimpleButton.GPS"
                        android:text="@string/gps" >
                    </Button>
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/logitudeEditText"
                        style="@style/SimpleEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions" />
                </TableRow>
            </TableLayout>
            
            <TextView
                style="@style/SimpleHeader"
                android:layout_marginTop="20dp"
                android:text="@string/title_count_of_caches" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cacheCountEditText"
                    style="@style/SimpleEditTextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </EditText>

                <Button
                    android:id="@+id/filterButton"
                    style="@style/SimpleButton.Filter"
                    android:text="@string/button_filter"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        android:layout_gravity="right|bottom|end"
        android:src="@drawable/ic_action_download"
        android:layout_margin="16dp"
        app:elevation="4dp" />

</LinearLayout>